[package]
name = "rdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4"
anyhow="1"
messages={ path="../messages"}
tokio={version="1", features=["sync", "parking_lot"]}

[build-dependencies]
bindgen="0.60"