[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1", features=["net", "sync"]}
futures-util="0.3"
log="0.4"
tokio-tungstenite="0.17"
anyhow="1"
rdp= { path="../rdp" }
messages= { path="../messages"}
serde_json="1"